--- a/views/base.pug
+++ b/views/base.pug
@@ -20,6 +20,6 @@ html
         //FOOTER
         include _footer
         
-        //script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.4/axios.min.js')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.4/axios.min.js')
         script(src="https://js.stripe.com/v3/")
         script(src='/js/bundled/index.js')
